# pellucid

./: .gitignore  Cargo.toml  README.md
assets/contracts/simple_contract/: Contract.sol  block_bytecodes.json  graph.gml  graph.json  graph_drawing.txt  opcodes.txt  symbolic_blocks.json
contracts/complex/: bytecode.txt  opcodes.txt
src/: lib.rs  main.rs  tests.rs  utils.rs
src/block_analysis/: analysis.rs
src/bytecode_reader/: bytecode.rs  metadata.rs  mod.rs  opcode.rs  opcode_functions.rs  vopcode.rs
src/create_blocks/: mod.rs  new_symbolic_expression.rs  parser.rs  symbolic_block.rs  symbolic_expression.rs  symbolic_stack.rs
src/create_graph/: block.rs  display.rs  duplication.rs  gml.rs  graph.rs  mod.rs  node.rs  post_processing.rs  simple_evm.rs  simple_stack.rs
src/detect_cycles/: acyclic_graph.rs  block_loops.rs  mod.rs  node_loops.rs
src/detect_functions/: candidate.rs  candidate_detection.rs  divergences.rs  function.rs  function_detection.rs  mod.rs
src/evm/: context.rs  execution_state.rs  expression.rs  mod.rs  simple_expression.rs  sparse_expression.rs  stack.rs  state.rs  symbolic_expression.rs
src/evm_old/: context.rs  mod.rs  simple_expression.rs
src/execution_flow/: execution_flow.rs  mod.rs
src/gui/: grid.rs
src/jump_graph/: block.rs  block_set.rs  display.rs  gml.rs  graph.rs  jump_graph.rs  mod.rs  node.rs  old_block.rs
src/research_and_development/: TODO.md  draw_graph_v1.rs  gml.rs  mod.rs
src/tools/: graph_tools.rs  mod.rs  stack.rs  utils.rs
tests/: test_bytecode_reader.rs  tests_graph.rs  utils.rs
(+63 files in other folders)
