[package]
name = "pellucid"
version = "0.1.0"
edition = "2021"

[dependencies]
const-decoder="*"
strum="*"
strum_macros="*"
primitive-types = { version = "*", features = ["serde"] }
hex = "0.4"
cbor = "0.4"
multibase = "0.9"
log = "*"
env_logger = "*"
itertools="*"
ctor="*"
queues = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
regex="1.6.0"
rand="0.8.5"
