[package]
name = "pellucid"
version = "0.1.0"
edition = "2021"

[dependencies]
primitive-types = { version = "0.12.0", features = ["serde"] }
hex = "0.4"
cbor = "0.4"
multibase = "0.9.1"
log = "0.4.17"
env_logger = "0.9.1"
itertools="0.10.5"
walkdir = "2.3.2"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive", "rc"] }


[dev-dependencies]
regex="1.6.0"
rand="0.8.5"
lazy_static="1.4.0"
serde_json = "1.0.87"
raqote= "0.8.1"
font-kit = "*"
toposort-scc = "0.5.4"
